--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,10 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"],
+      "@ui/responsive": ["./src/scaling"],
+      "@ui/tokens": ["./src/tokens"],
+      "react-native-responsive-ui": ["./src/index"]
     }
   },
   "include": [
