--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.vincent232.reactnativeresponsiveui"
     },
     "web": {
       "output": "static",
